crashes clicking on menubar while popup displayed (OS X 10.3 only) [@ FadeMenuWindows]. b=351230 r=mento sr=pav