widget/src/mac/nsMenuX.cpp
@@ -69,6 +69,7 @@
 #include "nsGUIEvent.h"
 
 #include "nsCRT.h"
+#include "nsToolkit.h"
 
 // externs defined in nsWindow.cpp
 extern nsIRollupListener * gRollupListener;
@@ -702,7 +703,10 @@ static pascal OSStatus MyMenuEventHandler(EventHandlerCallRef myHandler, EventRe
   else if (kind == kEventMenuOpening || kind == kEventMenuClosed) {
     if (kind == kEventMenuOpening && gRollupListener != nsnull && gRollupWidget != nsnull) {
       gRollupListener->Rollup();
-      return userCanceledErr;
+      // We can only return userCanceledErr on Tiger or later because it crashes on Panther.
+      // See bug 351230.
+      if (nsToolkit::OSXVersion() >= MAC_OS_X_VERSION_10_4_HEX)
+        return userCanceledErr;
     }
 
     nsISupports* supports = reinterpret_cast<nsISupports*>(userData);
